tests/semantic/fail/alias-3.tiger
let
	type a = b
	type b = c
	type c = b
in
end
